public/css/style7.css
/* ... */
.in-slide-content div.info-slide:hover {
    width: 200px;
    background: #FFF;
    position: absolute;
    bottom: 40px;
    padding: 10px 20px;
    text-indent: 0px;
    moz-border-radius: 0px;
    -webkit-border-radius: 0px;
    border-radius: 0px;
    z-index: 1000;
    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
    filter: alpha(opacity=1);
    opacity: 1;
}

.in-slide-content h2, .in-slide-content p {
    padding: 0;
    margin: 0;
    font-size: 12px;
    line-height: 24px;
}

.in-slide-content h2 {
    font-size: 14px;
    color: #444;
    text-shadow: none;
    font-weight: normal;
    text-transform: uppercase;
    z-index: 1001;
    position: relative;
    white-space: nowrap;
}

.info-slide p {
    color: #aaa;
    font-size: 13px;
    text-shadow: none;
    z-index: 1001;
    position: relative;
    margin: 0;
    font-weight: normal;
    white-space: nowrap;
}

.in-slide-content div.info-slide h2 {
    display: none;
    padding: 10px 10px 0 10px;
}

.in-slide-content div.info-slide p {
    display: none;
    padding: 0px 10px 10px 10px;
}

.in-slide-content div.info-slide:hover h2, .in-slide-content div.info-slide:hover p {
    display: inherit;
    padding: 0;
}

/*
	Media Queries
--------------------------- */
@media (min-width: 768px) {

}

@media (max-width: 768px) {
	.bannerImg{
		display:none;
	}
	
	.img-circle{
		display:none;
	}
	
	p{
		font-size:14px;
	}
	.hero_section {
		position: relative;
		padding-top: 10px;
	}
	.top_left_cont {
		padding: 38px 0;
	}
	.top_left_cont h2 {
		font-size: 25px;
		color: #FFF;
		line-height: 39px;
		margin: 0 0 9px 0;
	}
	.inner_section {
		padding: 20px 0 20px;
	}
	#aboutUs img{
		margin-bottom:20px;
	}
/*
	#aboutUs h3{
		font-size:16px;
		line-height:22px;
	}
*/
	.service_block{
		margin-bottom:20px;
	}
	.service_block h3 { 
		font-size: 16px;
	}
	service_block p {
		font-size: 10px; 
		margin: 0px;
		margin-bottom: 20px;
	}
	#filters ul{
		padding-left:0px;
	}
	.form {
		margin: 0 18px;
	}
	.page_section.team{
		padding: 40px 0;
	}
	, #clients {
		padding: 40px 0;
	}
	.client_logos ul li {
		display: inline;
		margin: 0 25px;
		padding: 11px 0;
		display: inline-block;
	}
	.social_links li {
		float: left; 
	}
	.contact_section{
		margin:0;
	}
	h2, .contact_section h2 {
		font-size: 30px;
	}
	.page_section.contact {
		padding: 60px 0 50px;
	} 
	.navbar-inverse .navbar-toggle .icon-bar{
		background:#d0313c;
	}
	.navbar-inverse .navbar-toggle {
		border-color: transparent;
	}
	.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus{
;		background:none;
		outline: none;
	}
	.navStyle ul li {
		display: block;
	}
	.navStyle {
		float: right;
		width: auto;
		text-align:center;
	}
	.navStyle ul li {
		display: block;
		margin: 0px;
	}
	.navStyle ul li a {
		font-size: 12px;
		padding: 15px 12px;
	}
	.navStyle ul li:last-child {
		margin: 0px;
	} 
    #service li{
        font-size:13px;
    }
/*
    #aboutUs p{
        font-size:14px;
    }
*/
} 
@media (max-width: 480px){
	.navStyle {
		float: right;
		width: 100%;
		text-align:center;
	} 
	.team_area {
		width: 99%;
	}
	.member-details {
		padding-left: 0;
		clear: left;
		display: block;
		padding-top: 18px;
	}
    #service li{
        font-size:10.5px;
    }
/*
    #aboutUs p{
        font-size:14px;
    }
*/
}

#show img{
    padding-top: 150px;
    padding-left: 390px;
    text-align:center;
}


/*Table on landing page formatting*/
.tg  {color: white; border-collapse:collapse;border-spacing:0;width:33%;}
.tg td{font-family:Arial, sans-serif;font-size:18px;padding:10px 5px;overflow:hidden;word-break:normal;width:100%;}
.tg th{font-family:Arial, sans-serif;font-size:20px;font-weight:normal;padding:10px 5px;overflow:hidden;word-break:normal;width:200px;}
.tg .tg-2awo{font-weight:bold;text-align:center}
.tg .tg-zlxb{text-align:center}
@media screen and (max-width: 767px) {.tg {width: auto !important;}.tg col {width: auto !important;}.tg-wrap {overflow-x: auto;-webkit-overflow-scrolling: touch;}}

